monitoring/kind-ingress-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/graph"
        backend:
          service:
            name: prometheus-service
            port:
              number: 8080
      - pathType: Prefix
        path: "/grafana"
        backend:
          service:
            name: grafana-service
            port:
              number: 3000
